deploy/maxint-www-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maxint-www-deployment
  labels:
    app: maxint-www
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maxint-www
  template:
    metadata:
      labels:
        app: maxint-www
    spec:
      containers:
        - name: maxint-www
          image: gcr.io/gradientzoo-1233/maxint-www:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "128m"
            limits:
              memory: "512Mi"
              cpu: "256m"
