deploy/maxint-www-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: maxint-www-svc
spec:
  type: NodePort
  ports:
  - port: 3000 # the port that this service should serve on
    targetPort: 3000 # the container on each pod to connect to, can be a name (e.g. 'www') or a number (e.g. 80)
    protocol: TCP
  selector:
    app: maxint-www
